--- a/data/html/loadsavefile.html
+++ b/data/html/loadsavefile.html
@@ -70,11 +70,16 @@
             <div class="thankscon">
                 <ul>
                     <li>
+                        If you have a save file which could help (for example a more up to date body of a perfect worker or the entire tech tree with all DLCs),
+                        feel free to upload your save to an issue. I will take the data from that save then to improve
+                        the several features of this save editor.
+                    </li>
+                    <li>
                         Every loaded save file is kept in memory, meaning you can expect almost up to 200 MB per save file which you load.
                     </li>
                     <li>
                         No sprites / images used, were created by me, they are from
-                        <a href="http://lazybeargames.com/" target="_blank">Lazy Bear Games</a> (and most of them were extracted from the WIKI)
+                        <a href="http://lazybeargames.com/" target="_blank">Lazy Bear Games</a>
                     </li>
                     <li>
                         Additionally the localization file is extracted from
